samples/_failures_safe/1761045068_7c101c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5435710.c: In function ‘main’:
./samples/SAFE/__tmp_d5435710.c:170:30: error: missing terminating " character
  170 |         case STATE_D: printf("D\n
      |                              ^~~~
./samples/SAFE/__tmp_d5435710.c:170:9: error: expected expression at end of input
  170 |         case STATE_D: printf("D\n
      |         ^~~~
./samples/SAFE/__tmp_d5435710.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5435710.c:170:9: error: expected declaration or statement at end of input
